<?xml version="1.0"?>
<package format="3">
  <name>map_sector_monitor</name>
  <version>0.1.0</version>
  <description>Map sector collision monitoring</description>
  <maintainer email="lorenz@example.com">Lorenz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

